prevent table scroll bars from showing on small screens

--- a/regulations/static/regulations/css/less/typography.less
+++ b/regulations/static/regulations/css/less/typography.less
@@ -524,9 +524,11 @@ tbody > tr:nth-child(odd){
 }
 
 /* make tables horizontally scroll on small screens */
-.table-wrap {
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch; // smoother scrolling
+@media only screen and ( max-width: 480px ) {
+    .table-wrap {
+        overflow-y: scroll;
+        -webkit-overflow-scrolling: touch; // smoother scrolling
+    }
 }
 
 /*
